assets/css/sidebar.css
/* ... */
.kite-tour section figure img {
  width: 100%;
}
.kite-tour .control-group {
  line-height: 1em;
}
.kite-tour .kite-tour-scroll-section {
  flex: 1 1 auto;
  overflow-y: scroll;
  margin: 10px 0;
}
.kite-tour input[type="checkbox"],
.kite-tour .setting-title {
  display: inline-block;
}
.kite-tour .kite-tour-scroll-section p {
  text-align: center;
}
.kite-tour .kite-tour-gutter {
  max-width: 100%;
  width: 600px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

